--- a/Day16/index.html
+++ b/Day16/index.html
@@ -1,39 +1,35 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Online Shopping Site</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <section class="header">
+<head>
+    <title>Online Shopping Site</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <nav class="header">
         <div>
-       <h3>Flipkart</h3>
-        <p>Explore plus</p>
-        <ul>
-       <li><a href="" button type="button">Search</a></button></li>
-       <li><a href="" button class="login-button">Login</a></button></li>
-        <li><a href="">Become a seller</a></li>
-        <li><a href="">More</a></li>
-        <li><a href="">Cart</a></li>
-       </ul>
-    </div>
-    </section>
-    <nav>
-        <img src="images/Top Offers.webp" alt="Top Offers">
-        <p>Top Offers</p>
-        <img src="images/Grocery.webp" alt="Grocery">
-        <p>Grocery</p>
-        <img src="images/Mobile.webp" alt="Mobile">
-        <p>Mobile</p>
-        <img src="images/Fashion.webp" alt="Fashion">
-        <p>Fashion</p>
-        <img src="images/Electronics.webp" alt="Electronics">
-        <p>Electronics</p>
-        <img src="images/Home.webp" alt="Home">
-        <p>Home</p>
-        <img src="images/Appliances.webp" alt="Appliances">
-        <p>Appliances</p>
-        <img src="images/Travel.webp"><p>Travel</p> 
-        </nav>
-    </body>
+            <p>Flipkart<br><p>Explore Plus</p>
+            <i class="fa fa-star-half-o"></i>
+        </div>
+        <div>
+            <button type="button"><p>Search for products,brands and more</p><i class="fa fa-search"></i></button>
+        </div>
+        <div>
+            <button type="buttons">Login</button>
+        </div>
+        <div>
+            <p>Become a Seller</p>
+        </div>
+        <div>
+            <p>More</p>
+            <i class="fa fa-angle-down"></i>
+        </div>
+        <div>
+            <i class="fa fa-shopping-cart"></i>
+            <p>Cart</p>
+        </div>
+    </nav>
+
+</body>
+
 </html>
