--- a/Day16/myntra.html/myntra.html
+++ b/Day16/myntra.html/myntra.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myntra</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <div class="navbar">
-        <ul>
-           <li><p>MEN</p></li>
-           <li><p>WOMEN</p></li>
-           <li><p>KIDS</p></li>
-           <li><P>HOME & LIVING</P></li>
-           <li><P>BEAUTY</P></li>
-           <li>STUDIO</li>
-           <div class="input" id="Search"></div>
-           <li><p>Profile</p></li>
-           <li><p>Wishlist</p></li>
-           <li><p>Bag</p></li>
-        </ul>
+        <div><img src="Images/Myntra_Logo.png" alt="Myntra"></div>
+        <div>
+            <p>MEN</p>
+        </div>
+        <div><P>WOMEN</P></div>
+        <div><P>KIDS</P></div>
+        <div><p>HOME & LIVING</p></div>
+        <div><p>BEAUTY</p></div>
+        <div><p>STUDIO</p></div>
+        <div><p>Profile</p></div>
+        <div><p>Wishlist</p></div>
+        <div><p>Bag</p></div>
     </div>
 </body>
+
 </html>
